nginx/nginx/1.21.6/nginx-1.21.6/nginx-build.log
src/stream/ngx_stream_proxy_module.c: In function ‘ngx_stream_proxy_log_error’:
src/stream/ngx_stream_proxy_module.c:2045:57: error: expected ‘)’ before ‘u’
 2045 |                      s->received, s->connection->sent, s
      |                                                         ^
      |                                                         )
 2046 |                      u->received, pc ? pc->sent : 0);
      |                      ~                                   
src/stream/ngx_stream_proxy_module.c:2025:29: error: variable ‘pc’ set but not used [-Werror=unused-but-set-variable]
 2025 |     ngx_connection_t       *pc;
      |                             ^~
cc1: all warnings being treated as errors
make[1]: *** [objs/Makefile:1353: objs/src/stream/ngx_stream_proxy_module.o] エラー 1
make[1]: *** 未完了のジョブを待っています....
make: *** [Makefile:10: build] エラー 2
